# libcreds3

./: Makefile.am  configure.ac  creds-test.c  creds.c  creds_fallback.h  credsctl.c  libcreds-3.0.pc.in  libcreds3.pc.in
dox/: Doxyfile
src/: Makefile.am  creds.c  creds.h  creds_fallback.h  credsctl.c
tests/: Makefile.am  check_creds.c
util/: Makefile.am  creds-get.c  creds-test.c
